--- a/views/organiser/sign_in.ejs
+++ b/views/organiser/sign_in.ejs
@@ -12,3 +12,11 @@
         </form>
     </div>
 </div>
+
+<form action="/organiser/create-us" method="POST">
+    <input type="email" name="email" required placeholder="Type Email" />
+    <input type="password" name="password" required placeholder="Type Password" />
+    <input type="hidden" name="isOrganiser" value="organiser" />
+    <input type="text" name="name" required value="AAA" />
+    <button>Sign-Up As Organiser</button>
+</form>
