--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -1,6 +1,11 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale:1,height:device-height" />
+    <meta charset="UTF-8" />
+    <meta name="keywords" content="CU, cu , chitkara , chitkara_live, chitkara live , cu live , cu_live , chalkpad , chitkara chalkpad , college management system login, college management system " />
+    <meta name="description" value="a communication platform for chitkara student" />
+
     <title>
         <%=locals.title%>
     </title>
