--- a/views/mailers/mail_footer.ejs
+++ b/views/mailers/mail_footer.ejs
@@ -1,17 +1,20 @@
-<br />
-<br />
-<div style="color: white">
-    <h3 style="margin-bottom: 5px">Regards</h3>
-    <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="" style="height: 45px; width: 45px; padding-left: 1px" />
+<% var url='http://44.202.8.216:8000/';%>
     <br />
-    <div style="width: fit-content">
-        <span style="font-size: 20px; color: rgb(180, 33, 33)">Chitkara_Live</span>
+    <br />
+    <div style="color: white">
+        <h3 style="margin-bottom: 5px">Regards</h3>
+        <a href="<%=url%>">
+            <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="" style="height: 45px; width: 45px; padding-left: 1px" />
+        </a>
         <br />
-        <span style="padding-left: 2px; color: black !important">be connected</span>
-    </div>
-    <br />
+        <div style="width: fit-content">
+            <span style="font-size: 20px; color: rgb(180, 33, 33)">Chitkara_Live</span>
+            <br />
+            <span style="padding-left: 2px; color: black !important">be connected</span>
+        </div>
+        <br />
 
-    <span style="color: white !important">For any other query, you can contact us on</span
+        <span style="color: white !important">For any other query, you can contact us on</span
   >
   <br />
   <span style="color: white !important"
