--- a/views/mailers/event/new_events.ejs
+++ b/views/mailers/event/new_events.ejs
@@ -1,6 +1,6 @@
 <!-- vfnf -->
 
-<% var url='http://localhost:8000';%>
+<% var url='http://44.202.8.216:8000/';%>
 
     <div style="
     background-color: rgba(34, 33, 33, 0.842) !important;
