--- a/views/mailers/request/recieve_new_request.ejs
+++ b/views/mailers/request/recieve_new_request.ejs
@@ -1,4 +1,4 @@
-<% var url='http://localhost:8000';%>
+<% var url='http://44.202.8.216:8000/';%>
 
     <div style="
     background-color: rgba(34, 33, 33, 0.842) !important;
