--- a/views/mailers/mail_footer.ejs
+++ b/views/mailers/mail_footer.ejs
@@ -1,4 +1,4 @@
-<% var url='http://44.202.8.216:8000/';%>
+<% var url='http://chitkaralive.com';%>
     <br />
     <br />
     <div style="color: white">
