--- a/views/edit-profile-page.ejs
+++ b/views/edit-profile-page.ejs
@@ -13,7 +13,7 @@
             <input style="border: 1px solid rgba(247, 247, 247, 0.931)" type="text" name="bio" placeholder="Type Bio" value="<%=locals.user.bio%>" />
             <div>
                 <abbr title="put your Whatsapp no "><img
-            src="https://cdn-icons.flaticon.com/png/512/3670/premium/3670051.png?token=exp=1640847041~hmac=6aa6c3f6e748466ce6ad38301532748f"
+            src="/uploads/icons/38.whatsapp.png"
             height="20px"
             width="20px"
             alt=""
@@ -22,7 +22,7 @@
             </div>
             <div>
                 <abbr title="put your mobile no "><img
-            src="https://cdn-icons-png.flaticon.com/512/724/724664.png"
+            src="/uploads/icons/12.call_icon.png"
             height="20px"
             width="20px"
             alt=""
