--- a/views/mailers/event/new_events.ejs
+++ b/views/mailers/event/new_events.ejs
@@ -19,7 +19,7 @@
                 <div>
                     <span style="margin: auto; color: cyan">By</span>
                     <br />
-                    <img src="bhjbj" height="40px" width="40px" alt="pic" />
+                    <img src="<%=url%><%=obj.by.pic%>" height="40px" width="40px" alt="pic" />
                     <br />
                     <a href="<%=url%>/user/profile?user_id=<%=obj.by._id%>" style="color: crimson">
                         <%=obj.by.name%> (
