--- a/views/mailers/mail_footer.ejs
+++ b/views/mailers/mail_footer.ejs
@@ -1,10 +1,10 @@
 <% var url='http://chitkaralive.com';%>
-    <br />
-    <br />
+
     <div style="color: white">
         <h3 style="margin-bottom: 5px">Regards</h3>
         <a href="<%=url%>">
-            <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="" style="height: 45px; width: 45px; padding-left: 1px" />
+            <!-- <img src="https://www.pngitem.com/pimgs/m/357-3577326_color-ball-logo-hd-png-download.png" alt="logo" style="height: 45px; width: 45px; padding-left: 1px" /> -->
+            <img src="<%=url%>/uploads/icons/18.logo.png" alt="logo" style="height: 45px; width: 45px; padding-left: 1px" />
         </a>
         <br />
         <div style="width: fit-content">
@@ -17,8 +17,14 @@
         <span style="color: white !important">For any other query, you can contact us on</span
   >
   <br />
-  <span style="color: white !important"
-    >Email:
+  <span style="display: flex; flex-direction: row">
+    <a href="mailTo:aaa.techy.in@gmail.com"
+      ><img
+        src="<%=url%>/uploads/icons/37.gmail.png"
+        alt="Email:"
+        style="padding-right: 1.5px; height: 40px; width: 40px"
+      />
+    </a>
     <a href="mailTo:aaa.techy.in@gmail.com">aaa.techy.in@gmail.com</a></span
   >
 </div>
