--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -117,7 +117,7 @@
                     <%}else{%>
                         <a href="/sign-in">
                             <div style="height: 40px; justify-content: flex-end">
-                                <span style="color: greenyellow">Log In</span>
+                                <span style="color: hsl(113, 100%, 50%) !important">Log In</span>
                             </div>
                         </a>
                         <%}%>
