--- a/assets/css/notifications.css
+++ b/assets/css/notifications.css
@@ -1,1 +1,56 @@
-#notifications{width:380px;background-color:transparent;position:fixed;top:56px;right:20px;z-index:1}#notifications,.notification{height:auto;display:flex;flex-direction:column}.notification{width:94%;left:100%;margin-bottom:5px;font-size:17;font-weight:600;transition:all .22s ease-out;overflow:hidden;word-wrap:break-word;position:relative;top:0;box-sizing:border-box;text-transform:capitalize;justify-content:flex-start;align-items:flex-start}.message{padding:8px}.indicator{background-color:#2f3b2f;height:1.4px;width:100%;border:none;transition:all .1s linear}.success_notification{background-color:#aef8ae;border:.6px solid rgba(79,201,79,.5);color:#006400}.error_notification{background-color:#fd7b64;border:.6px solid #f38470;color:#fff}.normal_notification{background-color:#7797f7;border:.6px solid #7797f7;color:#fff}
+#notifications {
+  width: 380px;
+  height: auto;
+  background-color: transparent;
+  /* background-color: indigo; */
+  position: fixed;
+  top: 56px;
+  right: 20px;
+  z-index: 99999999999999999;
+  display: flex;
+  flex-direction: column;
+  /* overflow: hidden; */ }
+
+.notification {
+  width: 94%;
+  left: 100%;
+  margin-bottom: 5px;
+  font-size: 17;
+  font-weight: 600;
+  height: auto;
+  transition: all 0.22s ease-out;
+  overflow: hidden;
+  word-wrap: break-word;
+  position: relative;
+  top: 0px;
+  box-sizing: border-box;
+  text-transform: capitalize;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; }
+
+.message {
+  padding: 8px; }
+
+.indicator {
+  background-color: #2f3b2f;
+  height: 1.4px;
+  width: 100%;
+  border: none;
+  transition: all 0.1s linear; }
+
+.success_notification {
+  background-color: #aef8ae;
+  border: 0.6px solid rgba(79, 201, 79, 0.5);
+  color: darkgreen; }
+
+.error_notification {
+  background-color: #fd7b64;
+  border: 0.6px solid #f38470;
+  color: white; }
+
+.normal_notification {
+  background-color: #7797f7;
+  border: 0.6px solid #7797f7;
+  color: white; }
