--- a/assets/scss/login_page.scss
+++ b/assets/scss/login_page.scss
@@ -3,7 +3,7 @@
     height: auto;
     width: auto;
     max-width: 740px;
-    min-width: 400px;
+    min-width: 380px;
     top: 50px;
     display: flex;
     border: 2px solid rgb(255, 0, 85);
@@ -15,6 +15,7 @@
     flex-wrap: wrap;
     background-color: brown;
     border-color: brown;
+    overflow: hidden;
     // max-height: 1000px;
 }
 
@@ -32,13 +33,28 @@
     background-color: inherit;
 }
 
-#option-container {
-    // width: 300px;
-    width: 220px;
-    height: 400px;
+#option-logo-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 220px;
+    max-width: 220px;
+    min-width: 220px;
+    overflow: hidden;
+    position: relative;
+}
+
+#option-container {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100% !important;
+    height: 400px;
+    overflow: hidden;
+    display: flex;
+    // justify-content: center;
+    // align-items: center;
     box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
     box-shadow: none;
     background-color: inherit;
