--- a/views/layouts/some_layout.ejs
+++ b/views/layouts/some_layout.ejs
@@ -15,6 +15,7 @@
 
     <%- style %>
         <link rel="stylesheet" href="<%=assetPath('css/notifications.css')%>" />
+        <link rel="stylesheet" href="<%=assetPath('css/home_layout.css')%>" />
 </head>
 
 <body>
