--- a/views/mailers/mail_header.ejs
+++ b/views/mailers/mail_header.ejs
@@ -1,4 +1,5 @@
-<div style="
+<% var url='http://chitkaralive.com';%>
+    <div style="
     color: rgb(197, 32, 32);
     padding: 5px;
     font-size: 55px;
@@ -8,7 +9,7 @@
     text-align: center;
     background-color: rgba(34, 33, 33, 0.582);
   ">
-    AAA
-</div>
-<br />
-<br />
+        <img src="<%=url%>/uploads/icons/0.aaalogo.png" height="60px" width="80px" alt="logo" />
+    </div>
+    <br />
+    <br />
