--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,22 +1,19 @@
 <link rel="stylesheet" href="<%=assetPath('css/login_page.css')%>" />
 <div id="outer">
-    <div style="
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    ">
+    <div id="option-logo-container">
         <div style="
         display: flex;
-        width: 95%;
+        width: 100%;
         box-sizing: border-box;
         flex-direction: row;
         align-items: center;
-
         margin-bottom: 0px;
+        padding: 2px 2px 1px 7px;
       ">
             <div>
-                <img src="uploads/icons/18.logo.png" alt="logo" style="height: 50px; width: 50px" />
+                <a href="/">
+                    <img src="uploads/icons/18.logo.png" alt="logo" style="background-color: inherit; height: 50px; width: 50px" />
+                </a>
             </div>
 
             <div style="
@@ -27,7 +24,7 @@
           justify-content: center;
           align-items: center;
         ">
-                <span style="font-size: 20px; font-weight: 900px; color: rgb(47, 0, 255)">Chitkara_Live</span
+                <span style="font-size: 20px; font-weight: 900px; color: rgb(4, 0, 255)">Chitkara_Live</span
         >
 
         <span style="color: rgb(30, 255, 0) !important">be connected</span>
