--- a/views/mailers/mail_header.ejs
+++ b/views/mailers/mail_header.ejs
@@ -9,7 +9,7 @@
     text-align: center;
     background-color: rgba(34, 33, 33, 0.582);
   ">
-        <img src="<%=url%>/uploads/icons/0.aaalogo.png" height="60px" width="80px" alt="logo" />
+        <img src="<%=url%>/uploads/icons/0.aaalogo.png" style="background-color: inherit !important" height="60px" width="110px" alt="logo" />
     </div>
     <br />
     <br />
