--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,1 +1,78 @@
-header{width:100%;min-width:400px;position:fixed;display:flex;flex-direction:row;color:#000;z-index:1;background-color:#fff;box-shadow:0 1px 14px 1px rgba(0,0,0,.2);padding:2px;margin:0;justify-content:space-evenly;flex-wrap:wrap}.left-div{width:fit-content}.left-div,.left-div div{display:flex;flex-direction:row;align-items:center;justify-content:center}.left-div div{padding:0 4px}.left-div div form{padding:0;margin:0}.mid-div,.right-div{width:40%;width:fit-content;display:flex;flex-direction:row;align-items:center;justify-content:space-between}.mid-div a,.right-div a{text-decoration:none}.mid-div a div,.right-div a div{display:flex;flex-direction:column;justify-content:center;align-items:center;opacity:.85;padding:2px 10px;color:rgba(48,46,46,.781)}.mid-div a div span,.right-div a div span{font-size:12}.mid-div a div:hover,.right-div a div:hover{opacity:1;border-bottom:2px solid #000;color:#000}.mid-div .current-active,.right-div .current-active{opacity:1;border-bottom:2px solid red;color:#000}.right-div{width:30%;width:fit-content;height:auto}.right-div a div{opacity:1}.right-div a div span{font-size:16;opacity:1;color:#000}.mid-div{width:40%}
+header {
+  width: 100%;
+  min-width: 400px;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  color: black;
+  z-index: 999999999;
+  background-color: white;
+  box-shadow: 0px 1px 14px 1px rgba(0, 0, 0, 0.2);
+  padding: 2px;
+  margin: 0px;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+
+.left-div {
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
+  .left-div div {
+    padding: 0px 4px 0px 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+    .left-div div form {
+      padding: 0px;
+      margin: 0px; }
+
+.mid-div,
+.right-div {
+  width: 40%;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between; }
+  .mid-div a,
+  .right-div a {
+    text-decoration: none; }
+    .mid-div a div,
+    .right-div a div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      opacity: 0.85;
+      padding: 2px 10px 2px 10px;
+      color: rgba(48, 46, 46, 0.781); }
+      .mid-div a div span,
+      .right-div a div span {
+        font-size: 12; }
+      .mid-div a div:hover,
+      .right-div a div:hover {
+        opacity: 1;
+        border-bottom: 2px solid black;
+        color: black; }
+  .mid-div .current-active,
+  .right-div .current-active {
+    opacity: 1;
+    border-bottom: 2px solid red;
+    color: black; }
+
+.right-div {
+  width: 30%;
+  width: fit-content;
+  height: auto; }
+  .right-div a div {
+    opacity: 1; }
+    .right-div a div span {
+      font-size: 16;
+      opacity: 1;
+      color: black; }
+
+.mid-div {
+  width: 40%; }
