--- a/assets/css/new_post.css
+++ b/assets/css/new_post.css
@@ -1,1 +1,137 @@
-#img-preview{width:100px;height:200px;border:2px dashed #333;margin-bottom:20px}#new-post,#update-profile{box-shadow:0 4px 8px 0 rgba(0,0,0,.2);transition:.3s;display:flex;flex-direction:column;padding:10px;margin:auto;width:30%;min-width:300px;background-color:#fff;position:relative;top:5%;color:#000}#new-post:hover,#update-profile:hover{box-shadow:0 8px 16px 0 rgba(0,0,0,.2)}#new-post #img-container,#update-profile #img-container{margin-top:-38px;text-align:center}#new-post #img-container img,#update-profile #img-container img{border:2px solid #fff;margin:auto}#new-post h3,#update-profile h3{margin:auto;width:100%;border-bottom:1px solid #4c4cd8;text-align:center;padding:0 30px;box-sizing:border-box;word-wrap:break-word;overflow:hidden;text-transform:capitalize;color:#000}#new-post div,#update-profile div{margin:auto;width:90%;max-width:90%}#new-post div form,#update-profile div form{display:flex;flex-direction:column;width:100%;max-width:100%;position:relative}#new-post div form div,#update-profile div form div{display:flex;width:100%;flex-direction:row;align-items:center;flex-wrap:wrap}#new-post div form div input,#update-profile div form div input{width:85%;max-width:85%;min-width:85%;margin:10px;word-wrap:break-word}#new-post div form #venu-span,#update-profile div form #venu-span{color:#5f9ea0;font-size:18}#new-post div form #venu-span:hover,#update-profile div form #venu-span:hover{text-decoration:underline;font-size:20;color:#4169e1}#new-post div form div,#new-post div form input,#new-post div form textarea,#update-profile div form div,#update-profile div form input,#update-profile div form textarea{margin:10px}#new-post div form textarea,#update-profile div form textarea{resize:vertical;min-height:30px}#new-post div form #message-div,#update-profile div form #message-div{padding:0;margin:2px 10px 10px;color:#4169e1;font-size:14}#new-post div form #preview,#update-profile div form #preview{margin:3px;display:flex;justify-content:center;height:auto}#new-post div form #preview img,#update-profile div form #preview img{max-width:100%}#new-post div form #all_images,#update-profile div form #all_images{display:flex;flex-direction:row;flex-wrap:wrap;margin:5px;justify-content:center;align-items:center}#new-post div form #all_images img,#update-profile div form #all_images img{opacity:.4}#new-post div form #all_images img:hover,#update-profile div form #all_images img:hover{opacity:1}#new-post div form button,#update-profile div form button{color:#fff;display:inline-block;position:relative;padding:10px 20px;width:auto;font-size:18;font-weight:700;background-color:#0a66c2;border:none;cursor:pointer}#new-post div form button:hover,#update-profile div form button:hover{background-color:#2849ac}.apply_disable{background-color:gray;pointer-events:none}
+#img-preview {
+  width: 100px;
+  height: 200px;
+  border: 2px dashed #333;
+  margin-bottom: 20px; }
+
+#new-post,
+#update-profile {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: auto;
+  width: 30%;
+  min-width: 300px;
+  background-color: #ffffff;
+  position: relative;
+  top: 5%;
+  color: black; }
+  #new-post:hover,
+  #update-profile:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+  #new-post #img-container,
+  #update-profile #img-container {
+    margin-top: -38px;
+    text-align: center; }
+    #new-post #img-container img,
+    #update-profile #img-container img {
+      border: 2px solid white;
+      margin: auto; }
+  #new-post h3,
+  #update-profile h3 {
+    margin: auto;
+    width: 100%;
+    border-bottom: 1px solid #4c4cd8;
+    text-align: center;
+    padding: 0px 30px 0px 30px;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    overflow: hidden;
+    text-transform: capitalize;
+    color: black; }
+  #new-post div,
+  #update-profile div {
+    margin: auto;
+    width: 90%;
+    max-width: 90%; }
+    #new-post div form,
+    #update-profile div form {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      max-width: 100%;
+      position: relative; }
+      #new-post div form div,
+      #update-profile div form div {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap; }
+        #new-post div form div input,
+        #update-profile div form div input {
+          width: 85%;
+          max-width: 85%;
+          min-width: 85%;
+          margin: 10px;
+          word-wrap: break-word; }
+      #new-post div form #venu-span,
+      #update-profile div form #venu-span {
+        color: cadetblue;
+        font-size: 18; }
+        #new-post div form #venu-span:hover,
+        #update-profile div form #venu-span:hover {
+          text-decoration: underline;
+          font-size: 20;
+          color: royalblue; }
+      #new-post div form input,
+      #new-post div form div,
+      #new-post div form textarea,
+      #update-profile div form input,
+      #update-profile div form div,
+      #update-profile div form textarea {
+        margin: 10px; }
+      #new-post div form textarea,
+      #update-profile div form textarea {
+        resize: vertical;
+        min-height: 30px; }
+      #new-post div form #message-div,
+      #update-profile div form #message-div {
+        padding: 0px;
+        margin: 2px 10px 10px 10px;
+        color: royalblue;
+        font-size: 14; }
+      #new-post div form #preview,
+      #update-profile div form #preview {
+        margin: 3px;
+        display: flex;
+        justify-content: center;
+        height: auto; }
+        #new-post div form #preview img,
+        #update-profile div form #preview img {
+          max-width: 100%; }
+      #new-post div form #all_images,
+      #update-profile div form #all_images {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 5px;
+        justify-content: center;
+        align-items: center; }
+        #new-post div form #all_images img,
+        #update-profile div form #all_images img {
+          opacity: 0.4; }
+          #new-post div form #all_images img:hover,
+          #update-profile div form #all_images img:hover {
+            opacity: 1; }
+      #new-post div form button,
+      #update-profile div form button {
+        color: white;
+        display: inline-block;
+        position: relative;
+        padding: 10px 20px 10px 20px;
+        width: auto;
+        font-size: 18;
+        font-weight: 700;
+        background-color: #0a66c2;
+        border: none;
+        cursor: pointer; }
+        #new-post div form button:hover,
+        #update-profile div form button:hover {
+          background-color: #2849ac; }
+
+.apply_disable {
+  background-color: gray;
+  pointer-events: none; }
