--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,1 +1,289 @@
-#post-container{width:100%;min-width:100%;margin:0 0 10px;color:#000;overflow:hidden}#post-container,#post-container .post-class{display:flex;flex-direction:column;position:relative}#post-container .post-class{margin:0 0 12px;background-color:#fff;box-shadow:0 1px 2px 1px rgba(0,0,0,.2);transition:.4;padding-bottom:30px}#post-container .post-class:hover{box-shadow:0 2px 4px 2px rgba(0,0,0,.2)}#post-container .post-class div{margin:4px 0;padding:6px;display:flex;flex-direction:row;box-sizing:border-box}#post-container .post-class .post-header{display:flex;flex-direction:row;justify-content:space-between;background-color:#000;width:100%;position:relative;margin-top:2px}#post-container .post-class .post-header div{display:flex;flex-direction:row;align-items:center;padding:4px}#post-container .post-class .post-header div a{text-decoration:none;color:#fff}#post-container .post-class .post-header div img{height:30px;width:30px;border-radius:50%;padding:5px}#post-container .post-class .post-header div div{color:#fff;display:flex;padding:0;margin:0;flex-direction:column;justify-content:center;align-items:start}#post-container .post-class .post-header div div span{margin:0;padding:2.5px}#post-container .post-class .event-details{position:relative;width:100%;max-width:100%;box-shadow:none;padding:0;word-wrap:break-word;border:none;display:flex;flex-direction:column;padding:0 15px;box-sizing:border-box;height:0;overflow:hidden;margin:0}#post-container .post-class .event-details .detail-container{padding:5px;margin:5px;box-sizing:border-box;display:flex;border-bottom:1px;flex-direction:row}#post-container .post-class .event-details .detail-container .icon-container{padding:8px 18px 8px 8px;box-sizing:border-box}#post-container .post-class .event-details .detail-container .detail-values{padding:2px;display:flex;flex-direction:column}#post-container .post-class .event-details .detail-container .detail-values span{word-wrap:break-word;text-transform:capitalize}#post-container .post-class .event-details .detail-container .detail-values .detail-head{color:#03faee;border-color:hotpink;font-size:21}#post-container .post-class .event-details .detail-container .detail-values .detail-value{color:#000;font-size:15;font-weight:500}#post-container .post-class .post-main-section{margin:auto;width:100%;box-shadow:none;position:relative}#post-container .post-class .post-main-section img{max-width:100%;max-height:60%;height:60%;margin:auto;display:none;padding:0;box-shadow:none}#post-container .post-class .post-main-section div{position:absolute;background-color:rgba(0,0,0,.719);color:#fff;padding:7px;top:0;right:4px;margin:0;border-radius:25px;font-size:13;font-weight:900;z-index:2}#post-container .post-class .post-main-section .button{position:absolute;padding:5px;background-color:rgba(0,0,0,.39);top:50%;color:#fff;z-index:2}#post-container .post-class .post-main-section .button:hover{background-color:#000}#post-container .post-class .post-main-section .back{left:0}#post-container .post-class .post-main-section .next{right:0}#post-container .post-class .main-text-section{font-size:25;padding:25px;margin:auto;display:inline-block;box-sizing:border-box;max-width:100%;width:100%;background-color:#fff;height:auto;word-wrap:break-word}#post-container .post-class .post-footer{display:flex;flex-direction:row;padding:5px;margin:10px;margin-bottom:2px;justify-content:space-between;border-top:1px solid gray}#post-container .post-class .post-footer span{display:flex;flex-direction:column;align-items:center;position:relative}#post-container .post-class .post-footer .comment-button:hover{cursor:pointer}#post-container .post-class .likes-detail{display:flex;flex-direction:column;padding:0 25px;background-color:hsla(0,9%,90%,.116);min-width:100%;margin:0;overflow:hidden}#post-container .post-class .likes-detail .first-div{display:flex;flex-direction:row;justify-content:space-between}#post-container .post-class .likes-detail .first-div span{font-size:19;font-weight:700}#post-container .post-class .likes-detail .first-div span a{text-decoration:none;color:#25b9f3}#post-container .post-class .likes-detail .first-div span a:hover{color:#05b8ff;text-decoration:underline}#post-container .post-class .likes-detail div{max-width:100%}#post-container .post-class .new-comment{padding:5px;margin:10px;display:flex;flex-direction:row;align-items:center}#post-container .post-class .new-comment form{padding:0;margin:0 5px;display:flex;flex-direction:row;width:100%}#post-container .post-class .new-comment form #comment-input{width:90%;line-height:30px;border-radius:25px;border:2px solid #dcdcdc}#post-container .post-class .new-comment form #comment-input:hover{box-shadow:0 .5px 1.5px .5px rgba(0,0,0,.2);transition:.4}#post-container .post-class .new-comment form button{width:7%;background-color:transparent;border:none;border-radius:0}.type-detail{padding:10px;justify-content:space-between;align-content:center;border-bottom:1px solid gray;cursor:pointer}.type-detail,.type-detail div{display:flex;flex-direction:row;flex-wrap:wrap}.type-detail div{justify-content:center;align-items:center}.type-detail div span{padding:0 4px;font-size:18}.type-detail div .upcoming{color:#7cfc00}.type-detail div .passed{color:rgba(196,37,37,.842)}.type-detail div .running{color:#4169e1}.type-detail div img,.type-detail img{background-color:transparent}.type-detail img{color:#ff0}.post-edit-option{transition:all .3s ease-in-out;padding:0;border-radius:50%}.post-edit-option span{text-decoration:none;color:#fff;font-size:28;font-weight:900;padding:2px 16px}.post-edit-option:hover{background-color:#fff}.post-edit-option:hover span,.toUpdate{color:#000}.toUpdate{display:flex;flex-direction:column;position:absolute;top:8px;z-index:1;transition:all .2s linear;right:2px;background-color:#fff;height:auto;width:auto;box-shadow:0 2px 4px 2px rgba(0,0,0,.2)}.toUpdate a{text-decoration:none;color:#000;font-size:24;padding:4px 7px;box-sizing:border-box}.toUpdate a:hover{background-color:rgba(65,105,225,.164);box-shadow:0 1px 2px 1px rgba(0,0,0,.2)}.comment-button:hover{border-bottom:2px solid #03faee}.post-creator-link{transition:all .2s ease-in-out}.post-creator-link:hover img{transition:all .3s ease-in-out;border:1px solid #03faee}
+#post-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-width: 100%;
+  position: relative;
+  margin: 0px 0px 10px 0px;
+  position: relative;
+  color: black;
+  overflow: hidden; }
+  #post-container .post-class {
+    margin: 0px 0px 12px 0px;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: 0.4;
+    padding-bottom: 30px; }
+    #post-container .post-class:hover {
+      box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2); }
+    #post-container .post-class div {
+      margin: 4px 0px 4px 0px;
+      padding: 6px;
+      display: flex;
+      flex-direction: row;
+      box-sizing: border-box; }
+    #post-container .post-class .post-header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background-color: black;
+      width: 100%;
+      position: relative;
+      margin-top: 2px; }
+      #post-container .post-class .post-header div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 4px; }
+        #post-container .post-class .post-header div a {
+          text-decoration: none;
+          color: white; }
+        #post-container .post-class .post-header div img {
+          height: 30px;
+          width: 30px;
+          border-radius: 50%;
+          padding: 5px; }
+        #post-container .post-class .post-header div div {
+          color: white;
+          display: flex;
+          padding: 0px;
+          margin: 0px;
+          flex-direction: column;
+          justify-content: center;
+          align-items: start; }
+          #post-container .post-class .post-header div div span {
+            margin: 0px;
+            padding: 2.5px; }
+    #post-container .post-class .event-details {
+      position: relative;
+      width: 100%;
+      max-width: 100%;
+      box-shadow: none;
+      box-sizing: border-box;
+      padding: 0px;
+      word-wrap: break-word;
+      border: none;
+      display: flex;
+      flex-direction: column;
+      padding: 0px 15px 0px 15px;
+      box-sizing: border-box;
+      height: 0px;
+      overflow: hidden;
+      margin: 0px; }
+      #post-container .post-class .event-details .detail-container {
+        padding: 5px;
+        margin: 5px;
+        box-sizing: border-box;
+        display: flex;
+        border-bottom: 1px;
+        flex-direction: row; }
+        #post-container .post-class .event-details .detail-container .icon-container {
+          padding: 8px 18px 8px 8px;
+          box-sizing: border-box; }
+        #post-container .post-class .event-details .detail-container .detail-values {
+          padding: 2px;
+          display: flex;
+          flex-direction: column; }
+          #post-container .post-class .event-details .detail-container .detail-values span {
+            word-wrap: break-word;
+            text-transform: capitalize; }
+          #post-container .post-class .event-details .detail-container .detail-values .detail-head {
+            color: #03faee;
+            border-color: hotpink;
+            font-size: 21; }
+          #post-container .post-class .event-details .detail-container .detail-values .detail-value {
+            color: black;
+            font-size: 15;
+            font-weight: 500; }
+    #post-container .post-class .post-main-section {
+      margin: auto;
+      width: 100%;
+      box-shadow: none;
+      position: relative; }
+      #post-container .post-class .post-main-section img {
+        max-width: 100%;
+        max-height: 60%;
+        height: 60%;
+        margin: auto;
+        display: none;
+        padding: 0px;
+        box-shadow: none; }
+      #post-container .post-class .post-main-section div {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.719);
+        color: white;
+        padding: 7px;
+        top: 0px;
+        right: 4px;
+        margin: 0px;
+        border-radius: 25px;
+        font-size: 13;
+        font-weight: 900;
+        z-index: 3; }
+      #post-container .post-class .post-main-section .button {
+        position: absolute;
+        padding: 5px;
+        background-color: rgba(0, 0, 0, 0.39);
+        top: 50%;
+        color: white;
+        z-index: 3; }
+        #post-container .post-class .post-main-section .button:hover {
+          background-color: black; }
+      #post-container .post-class .post-main-section .back {
+        left: 0px; }
+      #post-container .post-class .post-main-section .next {
+        right: 0px; }
+    #post-container .post-class .main-text-section {
+      font-size: 25;
+      padding: 25px;
+      margin: auto;
+      display: inline-block;
+      box-sizing: border-box;
+      max-width: 100%;
+      width: 100%;
+      background-color: white;
+      height: auto;
+      word-wrap: break-word; }
+    #post-container .post-class .post-footer {
+      display: flex;
+      flex-direction: row;
+      padding: 5px;
+      margin: 10px;
+      margin-bottom: 2px;
+      justify-content: space-between;
+      border-top: 1px solid gray; }
+      #post-container .post-class .post-footer span {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative; }
+      #post-container .post-class .post-footer .comment-button:hover {
+        cursor: pointer; }
+    #post-container .post-class .likes-detail {
+      display: flex;
+      flex-direction: column;
+      padding: 0px 25px 0px 25px;
+      background-color: rgba(231, 226, 226, 0.116);
+      min-width: 100%;
+      margin: 0px;
+      overflow: hidden; }
+      #post-container .post-class .likes-detail .first-div {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between; }
+        #post-container .post-class .likes-detail .first-div span {
+          font-size: 19;
+          font-weight: 700; }
+          #post-container .post-class .likes-detail .first-div span a {
+            text-decoration: none;
+            color: #25b9f3; }
+            #post-container .post-class .likes-detail .first-div span a:hover {
+              color: #05b8ff;
+              text-decoration: underline; }
+      #post-container .post-class .likes-detail div {
+        max-width: 100%; }
+    #post-container .post-class .new-comment {
+      padding: 5px;
+      margin: 10px;
+      display: flex;
+      flex-direction: row;
+      align-items: center; }
+      #post-container .post-class .new-comment form {
+        padding: 0px;
+        margin: 0px 5px 0px 5px;
+        display: flex;
+        flex-direction: row;
+        width: 100%; }
+        #post-container .post-class .new-comment form #comment-input {
+          width: 90%;
+          line-height: 30px;
+          border-radius: 25px;
+          border: 2px solid gainsboro; }
+          #post-container .post-class .new-comment form #comment-input:hover {
+            box-shadow: 0px 0.5px 1.5px 0.5px rgba(0, 0, 0, 0.2);
+            transition: 0.4; }
+        #post-container .post-class .new-comment form button {
+          width: 7%;
+          background-color: transparent;
+          border: none;
+          border-radius: 0px; }
+
+.type-detail {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+  flex-wrap: wrap;
+  border-bottom: 1px solid gray;
+  cursor: pointer; }
+  .type-detail div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; }
+    .type-detail div span {
+      padding: 0px 4px 0px 4px;
+      font-size: 18; }
+    .type-detail div .upcoming {
+      color: lawngreen; }
+    .type-detail div .passed {
+      color: rgba(196, 37, 37, 0.842); }
+    .type-detail div .running {
+      color: royalblue; }
+    .type-detail div img {
+      background-color: transparent; }
+  .type-detail img {
+    color: yellow;
+    background-color: transparent; }
+
+.post-edit-option {
+  transition: all 0.3s ease-in-out;
+  padding: 0;
+  border-radius: 50%; }
+  .post-edit-option span {
+    text-decoration: none;
+    color: white;
+    font-size: 28;
+    font-weight: 900;
+    padding: 2px 16px 2px 16px; }
+  .post-edit-option:hover {
+    background-color: white; }
+    .post-edit-option:hover span {
+      color: black; }
+
+.toUpdate {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 8px;
+  z-index: 1;
+  transition: all 0.2s linear;
+  right: 2px;
+  background-color: white;
+  color: black;
+  height: auto;
+  width: auto;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2); }
+  .toUpdate a {
+    text-decoration: none;
+    color: black;
+    font-size: 24;
+    padding: 4px 7px 4px 7px;
+    box-sizing: border-box; }
+    .toUpdate a:hover {
+      background-color: rgba(65, 105, 225, 0.164);
+      box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2); }
+
+.comment-button:hover {
+  border-bottom: 2px solid #03faee; }
+
+.post-creator-link {
+  transition: all 0.2s ease-in-out; }
+  .post-creator-link:hover img {
+    transition: all 0.3s ease-in-out;
+    border: 1px solid #03faee; }
