--- a/views/team.ejs
+++ b/views/team.ejs
@@ -154,7 +154,7 @@
     backImage = backImage.replace(/\\/g, "/");
     console.log("backImage is ~~~~~~~~~~~~~~~~~~ %%%%%%%%%%%% ", backImage);
     let image =
-      "url('http://localhost:8000" +
+      "url('http://chitkaralive.com" +
       backImage +
       "')right bottom / 150px 200px no-repeat";
     console.log("image is ", image);
