--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -13,7 +13,10 @@
 
 #home-content-container {
     width: 38%;
-    min-width: 400px;
+    // min-width: 400px;
+    min-width: 360px;
+    background-color: red;
+    overflow: hidden;
     margin: 0;
     position: relative;
     display: flex;
