--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -102,11 +102,10 @@
       margin: auto;
       width: 100%;
       box-shadow: none;
-      position: relative; }
+      position: relative;
+      min-height: 100px; }
       #post-container .post-class .post-main-section img {
         max-width: 100%;
-        max-height: 60%;
-        height: 60%;
         margin: auto;
         display: none;
         padding: 0px;
