some file change

--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -66,7 +66,7 @@
     <%-include('../partials/_header');-%>
 
         <div id="page-outline">
-            <div id="request-new-creator-account-container" class="no_display">
+            <div id="request-new-creator-account-container" style="height: auto; padding-bottom: 2px" class="no_display">
                 <div style="margin: auto">
                     <h2 style="text-align: center">Request For New Creator Account</h2>
                 </div>
@@ -90,7 +90,7 @@
                     </form>
                 </div>
                 <div style="text-align: center; margin-top: 2px">
-                    <img onclick="disappearCreatorRequestPage()" src="https://cdn-icons-png.flaticon.com/512/929/929416.png" style="
+                    <img onclick="disappearCreatorRequestPage()" src="/uploads/icons/42.cut-icon.png" style="
               margin: auto;
               cursor: pointer;
               height: 40px;
