--- a/assets/scss/my-profile-page.scss
+++ b/assets/scss/my-profile-page.scss
@@ -390,6 +390,15 @@
     }
 }
 
+@media screen and(max-width:800px) {
+    #profile-page {
+        width: 95%;
+        min-width: none;
+        margin: auto;
+        left: 0px;
+    }
+}
+
 .alert-display {
     width: 90%;
     margin: auto;
