--- a/assets/css/mess.css
+++ b/assets/css/mess.css
@@ -1,1 +1,70 @@
-.menu-options{background-color:#524f4f;color:#fff;transition:border .3s ease-in-out;padding:0 20px;box-sizing:border-box;border-radius:25px;display:flex;align-items:center;justify-content:center;border:0;margin:0;height:unset;text-transform:uppercase}.active-menu-tab,.menu-options:hover{border:2px solid #4169e1}.active-menu-tab{background-color:rgba(19,153,231,.945)}#mess-container{width:100%;height:auto;box-shadow:0 2px 4px 2px rgba(0,0,0,.2);box-sizing:border-box;margin-top:15px;margin-bottom:15px;position:relative}#mess-container:hover{box-shadow:0 4px 8px 4px rgba(0,0,0,.2)}.day-menu-edit-option{position:absolute;right:0;top:0;transition:all .3s ease-in-out;padding:7 0;border-radius:50%}.day-menu-edit-option span{text-decoration:none;color:#000;font-size:28;font-weight:900;padding:20px}.day-menu-edit-option:hover{background-color:hsla(0,0%,50%,.836);cursor:pointer}.toUpdate{display:flex;flex-direction:column;position:absolute;top:5px;z-index:1;transition:all .2s linear;right:0;background-color:#fff;color:#000;height:auto;width:auto;padding:0;box-shadow:0 2px 4px 2px rgba(0,0,0,.2)}.toUpdate a{text-decoration:none;color:#000;padding:12px 28px}.toUpdate a:hover{background-color:rgba(65,105,225,.164);box-shadow:0 1px 2px 1px rgba(0,0,0,.2)}
+.menu-options {
+  background-color: #524f4f;
+  color: white;
+  transition: border 0.3s ease-in-out;
+  padding: 0px 20px 0px 20px;
+  box-sizing: border-box;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0px;
+  margin: 0px;
+  height: unset;
+  text-transform: uppercase; }
+  .menu-options:hover {
+    border: 2px solid royalblue; }
+
+.active-menu-tab {
+  background-color: rgba(19, 153, 231, 0.945);
+  border: 2px solid royalblue; }
+
+#mess-container {
+  width: 100%;
+  height: auto;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  position: relative; }
+  #mess-container:hover {
+    box-shadow: 0px 4px 8px 4px rgba(0, 0, 0, 0.2); }
+
+.day-menu-edit-option {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  transition: all 0.3s ease-in-out;
+  padding: 7 0 7 0;
+  border-radius: 50%; }
+  .day-menu-edit-option span {
+    text-decoration: none;
+    color: black;
+    font-size: 28;
+    font-weight: 900;
+    padding: 20px; }
+  .day-menu-edit-option:hover {
+    background-color: rgba(128, 128, 128, 0.836);
+    cursor: pointer; }
+
+.toUpdate {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 5px;
+  z-index: 1;
+  transition: all 0.2s linear;
+  right: 0px;
+  background-color: white;
+  color: black;
+  height: auto;
+  width: auto;
+  padding: 0px;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.2); }
+  .toUpdate a {
+    text-decoration: none;
+    color: black;
+    padding: 12px 28px 12px 28px; }
+    .toUpdate a:hover {
+      background-color: rgba(65, 105, 225, 0.164);
+      box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2); }
