--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -46,7 +46,7 @@
             <div style="font-size: 18">chitkara_live</div>
             <div style="font-size: 12">be connected</div>
         </div> -->
-        <div>
+        <div style="max-width: 250px; background-color: red; overflow: hidden">
             <form action="/search" method="POST" id="search-form">
                 <input id="search-input" type="text" name="name" required placeholder="Search users" style="background-color: rgb(238, 238, 238)" />
                 <input type="submit" value="s" />
