--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -46,9 +46,9 @@
             <div style="font-size: 18">chitkara_live</div>
             <div style="font-size: 12">be connected</div>
         </div> -->
-        <div style="max-width: 250px; background-color: red; overflow: hidden">
+        <div>
             <form action="/search" method="POST" id="search-form">
-                <input id="search-input" type="text" name="name" required placeholder="Search users" style="background-color: rgb(238, 238, 238)" />
+                <input id="search-input" type="text" name="name" required placeholder="Search users" style="max-width: 250px; background-color: green; overflow: hidden" />
                 <input type="submit" value="s" />
             </form>
         </div>
