--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -48,7 +48,11 @@
         </div> -->
         <div>
             <form action="/search" method="POST" id="search-form">
-                <input id="search-input" type="text" name="name" required placeholder="Search users" style="max-width: 250px; background-color: green; overflow: hidden" />
+                <input id="search-input" type="text" name="name" required placeholder="Search users" style="
+            max-width: 220px;
+            background-color: rgb(238, 238, 238);
+            overflow: hidden;
+          " />
                 <input type="submit" value="s" />
             </form>
         </div>
