--- a/views/likes.ejs
+++ b/views/likes.ejs
@@ -49,10 +49,10 @@
 </div>
 
 <script>
-    function loadMoreLikeButton(lastTime, postId) {
+    function loadMoreLikeButton(lastTime, postId, type) {
         console.log(" time is ", lastTime);
         return $(
-            `<button class='load-like load-on-demand' postId=${postId}  time=${lastTime} >Load More Likes</button>`
+            `<button class='load-like load-on-demand' type=${type} postId=${postId}  time=${lastTime} >Load More Likes</button>`
         );
     }
 
@@ -65,7 +65,7 @@
 
 
         // console.log("type is ####################### ",type," post is ",postId);
-        let loadMoreLikeBtn = loadMoreLikeButton(Date.now(), postId);
+        let loadMoreLikeBtn = loadMoreLikeButton(Date.now(), postId, type);
         // $('.like-container').append(loadMoreLikeBtn);
         $('#likes-page').append(loadMoreLikeBtn);
         //no need to
