--- a/assets/css/home_layout.css
+++ b/assets/css/home_layout.css
@@ -108,6 +108,10 @@
   opacity: 0.8;
   pointer-events: none !important; }
 
+.lock_form_without_background {
+  opacity: 0.8;
+  pointer-events: none !important; }
+
 .loader {
   display: flex !important;
   flex-direction: column !important;
@@ -375,10 +379,37 @@
   /* For mobile phones: */
   #request-new-creator-account-container {
     width: 95%;
-    margin: auto; } }
+    margin: auto; }
+  #toggle-account-option {
+    width: 100% !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    margin: auto !important;
+    top: auto !important; } }
 
 .no_display {
-  display: none; }
+  display: none !important; }
 
 .active_display {
   display: block; }
+
+#toggle-account-option {
+  border-radius: 4px;
+  position: fixed;
+  top: 60px;
+  right: 50px;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+  z-index: 9999;
+  background-color: #3d3d3d;
+  color: white; }
+  #toggle-account-option a {
+    color: white;
+    width: 100%;
+    box-sizing: border-box;
+    text-decoration: none; }
+    #toggle-account-option a:hover {
+      background-color: rgba(127, 255, 212, 0.226); }
+    #toggle-account-option a div {
+      box-sizing: border-box; }
