--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -211,7 +211,8 @@
   color: black;
   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
-  overflow: hidden; }
+  overflow: hidden;
+  border-radius: 4px; }
   #profile-view div {
     display: flex;
     flex-direction: column;
@@ -272,7 +273,8 @@
   flex-direction: column;
   box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
   transition: 0.4;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  border-radius: 4px; }
   #upcoming-events ::-webkit-scrollbar {
     width: 5px !important;
     /* width of the entire scrollbar */ }
