--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -287,6 +287,7 @@
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     margin-bottom: 10px;
     overflow: hidden;
+    border-radius: 4px;
     div {
         display: flex;
         flex-direction: column;
@@ -360,6 +361,7 @@
     box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.2);
     transition: 0.4;
     margin-bottom: 10px;
+    border-radius: 4px;
      ::-webkit-scrollbar {
         width: 5px !important;
         /* width of the entire scrollbar */
