--- a/views/layouts/home_layout.ejs
+++ b/views/layouts/home_layout.ejs
@@ -101,7 +101,88 @@
             </div>
             <%-body-%>
         </div>
-
+        <!-- <div id="toggle-account-option" style="
+        position: absolute;
+        top: 60px;
+        right: 50px;
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+        background-color: rgb(61, 61, 61);
+        color: white;
+      ">
+            <a>
+                <div style="
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            height: auto;
+            width: auto;
+            padding: 7px;
+            margin: 3px;
+            width: 100%;
+            justify-content: space-between;
+          ">
+                    <div style="display: flex; flex-direction: row; align-items: center">
+                        <img src="<%=locals.user.pic%>" alt="some" height="50px" width="50px" style="border-radius: 50%" />
+                        <span style="
+                padding-left: 5px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+              ">
+              <span> Shivam Gupta </span>
+                        <span style="color: lightcoral; font-size: 12.5"> Hostel </span>
+                        </span>
+                    </div>
+                    <div style="visibility: hidden; width: 140px"></div>
+                    <div style="
+              background-color: royalblue;
+              height: 20px;
+              width: 20px;
+              border-radius: 50%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            ">
+                        <span style="
+                height: 7px;
+                width: 7px;
+                background-color: black !important;
+                border-radius: 50%;
+              "></span>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div style="
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            height: auto;
+            width: auto;
+            padding: 7px;
+            margin: 3px;
+          ">
+                    <div style="display: flex; flex-direction: row; align-items: center">
+                        <img src="<%=locals.user.pic%>" alt="some" height="50px" width="50px" style="border-radius: 50%" />
+                        <span style="padding-left: 5px">Shivam</span>
+                    </div>
+                    <div style="visibility: hidden; width: 140px"></div>
+                    <div style="
+              background-color: transparent;
+              height: 17px;
+              width: 17px;
+              border-radius: 50%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border: 1.5px solid white;
+              box-sizing: border-box;
+            "></div>
+                </div>
+            </a>
+        </div> -->
         <%- script %>
 
             <script src="<%=assetPath('js/login.js')%>"></script>
